[package]
name = "flint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.2"
pest_derive = "2.7.2"

[dev-dependencies]
lazy_static = "1.4.0"
pest-test = "0.1.5"
pest-test-gen = "0.1.6"

[patch.crates-io]
pest-test = { path = "../pest-test/pest-test" }
